--- a/public/404.html
+++ b/public/404.html
@@ -1,17 +1,27 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>The page you were looking for doesn't exist (404)</title>
+  <title>Unexplored Yet</title>
   <meta name="viewport" content="width=device-width,initial-scale=1">
   <style>
+
   .rails-default-error-page {
-    background-color: #EFEFEF;
+    background-color: #1E5772;
     color: #2E2F30;
     text-align: center;
     font-family: arial, sans-serif;
     margin: 0;
   }
-
+  p {
+    color: #1E5772;
+  }
+  a {
+    text-decoration: none;
+    opacity: 0.6;
+  }
+  a:hover {
+    opacity: 1;
+  }
   .rails-default-error-page div.dialog {
     width: 95%;
     max-width: 33em;
@@ -23,9 +33,8 @@
     border-right-color: #999;
     border-left-color: #999;
     border-bottom-color: #BBB;
-    border-top: #B00100 solid 4px;
-    border-top-left-radius: 9px;
-    border-top-right-radius: 9px;
+    border-top: #1E5772 solid 4px;
+    border-radius: 9px;
     background-color: white;
     padding: 7px 12% 0;
     box-shadow: 0 3px 8px rgba(50, 50, 50, 0.17);
@@ -33,7 +42,7 @@
 
   .rails-default-error-page h1 {
     font-size: 100%;
-    color: #730E15;
+    color: #1E5772;
     line-height: 1.5em;
   }
 
@@ -47,8 +56,8 @@
     border-bottom-color: #999;
     border-bottom-left-radius: 4px;
     border-bottom-right-radius: 4px;
-    border-top-color: #DADADA;
-    color: #666;
+    border-top-color: #1E5772;
+    color: #1E5772;
     box-shadow: 0 3px 8px rgba(50, 50, 50, 0.17);
   }
   </style>
@@ -58,10 +67,10 @@
   <!-- This file lives in public/404.html -->
   <div class="dialog">
     <div>
-      <h1>The page you were looking for doesn't exist.</h1>
-      <p>You may have mistyped the address or the page may have moved.</p>
+      <h1>Hey, You've reached a place we didn't explore yet, we noticed the path, and will send our explorer.. <img src="/project.png" alt="explore"></h1>
+      <p>Please return on previous page to continue your journey or click <a href="http://www.chessrise.fr/"><strong>here</strong></a></p>
+      <img src="/landing.png" alt="landing">
     </div>
-    <p>If you are the application owner check the logs for more information.</p>
   </div>
 </body>
 </html>
