--- a/public/422.html
+++ b/public/422.html
@@ -1,17 +1,27 @@
 <!DOCTYPE html>
 <html>
 <head>
+  <meta charset="UTF-8">
   <title>The change you wanted was rejected (422)</title>
   <meta name="viewport" content="width=device-width,initial-scale=1">
   <style>
   .rails-default-error-page {
-    background-color: #EFEFEF;
+    background-color: #1E5772;
     color: #2E2F30;
     text-align: center;
     font-family: arial, sans-serif;
     margin: 0;
   }
-
+  p {
+    color: #1E5772;
+  }
+  a {
+    text-decoration: none;
+    opacity: 0.6;
+  }
+  a:hover {
+    opacity: 1;
+  }
   .rails-default-error-page div.dialog {
     width: 95%;
     max-width: 33em;
@@ -23,9 +33,8 @@
     border-right-color: #999;
     border-left-color: #999;
     border-bottom-color: #BBB;
-    border-top: #B00100 solid 4px;
-    border-top-left-radius: 9px;
-    border-top-right-radius: 9px;
+    border-top: #1E5772 solid 4px;
+    border-radius: 9px;
     background-color: white;
     padding: 7px 12% 0;
     box-shadow: 0 3px 8px rgba(50, 50, 50, 0.17);
@@ -33,7 +42,7 @@
 
   .rails-default-error-page h1 {
     font-size: 100%;
-    color: #730E15;
+    color: #1E5772;
     line-height: 1.5em;
   }
 
@@ -47,8 +56,8 @@
     border-bottom-color: #999;
     border-bottom-left-radius: 4px;
     border-bottom-right-radius: 4px;
-    border-top-color: #DADADA;
-    color: #666;
+    border-top-color: #1E5772;
+    color: #1E5772;
     box-shadow: 0 3px 8px rgba(50, 50, 50, 0.17);
   }
   </style>
@@ -58,10 +67,11 @@
   <!-- This file lives in public/422.html -->
   <div class="dialog">
     <div>
-      <h1>The change you wanted was rejected.</h1>
+      <h1>We're sorry, the change you wanted was rejected.</h1>
       <p>Maybe you tried to change something you didn't have access to.</p>
     </div>
-    <p>If you are the application owner check the logs for more information.</p>
+    <p>Your should retry with new input, or take a break </p>
+    <img src="/chipmunk.png" alt="chessmate">
   </div>
 </body>
 </html>
