--- a/public/500.html
+++ b/public/500.html
@@ -5,13 +5,16 @@
   <meta name="viewport" content="width=device-width,initial-scale=1">
   <style>
   .rails-default-error-page {
-    background-color: #EFEFEF;
+    background-color: #1E5772;
     color: #2E2F30;
     text-align: center;
     font-family: arial, sans-serif;
     margin: 0;
   }
-
+  p {
+    font-size: 12px;
+    opacity: 0.6;
+  }
   .rails-default-error-page div.dialog {
     width: 95%;
     max-width: 33em;
@@ -23,7 +26,7 @@
     border-right-color: #999;
     border-left-color: #999;
     border-bottom-color: #BBB;
-    border-top: #B00100 solid 4px;
+    border-top: #1E5772 solid 4px;
     border-top-left-radius: 9px;
     border-top-right-radius: 9px;
     background-color: white;
@@ -33,7 +36,7 @@
 
   .rails-default-error-page h1 {
     font-size: 100%;
-    color: #730E15;
+    color: #1E5772;
     line-height: 1.5em;
   }
 
@@ -47,7 +50,7 @@
     border-bottom-color: #999;
     border-bottom-left-radius: 4px;
     border-bottom-right-radius: 4px;
-    border-top-color: #DADADA;
+    border-top-color: #1E5772;
     color: #666;
     box-shadow: 0 3px 8px rgba(50, 50, 50, 0.17);
   }
@@ -58,9 +61,12 @@
   <!-- This file lives in public/500.html -->
   <div class="dialog">
     <div>
-      <h1>We're sorry, but something went wrong.</h1>
+      <h1>Hey, sorry for the delay, <br>we have dedicated a team to fix it. </h1>
+      <img src="/astronaut.png" alt="chessteam1">
+      <img src="/astronaut2.png" alt="chessteam3">
+      <img src="/monkey.png" alt="chessteam2">
     </div>
-    <p>If you are the application owner check the logs for more information.</p>
+    <p><i>BASE TO STATION "-Guys, our players are waiting... "</i></p>
   </div>
 </body>
 </html>
