--- a/public/500.html
+++ b/public/500.html
@@ -4,7 +4,7 @@
   <title>We're sorry, but something went wrong (500)</title>
   <meta name="viewport" content="width=device-width,initial-scale=1">
   <style>
-  .rails-default-error-page {
+  .page {
     background-color: #1E5772;
     color: #2E2F30;
     text-align: center;
@@ -15,13 +15,13 @@
     font-size: 12px;
     opacity: 0.6;
   }
-  .rails-default-error-page div.dialog {
+  .page div.dialog {
     width: 95%;
     max-width: 33em;
     margin: 4em auto 0;
   }
 
-  .rails-default-error-page div.dialog > div {
+  .page div.dialog > div {
     border: 1px solid #CCC;
     border-right-color: #999;
     border-left-color: #999;
@@ -34,13 +34,13 @@
     box-shadow: 0 3px 8px rgba(50, 50, 50, 0.17);
   }
 
-  .rails-default-error-page h1 {
+  .page h1 {
     font-size: 100%;
     color: #1E5772;
     line-height: 1.5em;
   }
 
-  .rails-default-error-page div.dialog > p {
+  .page div.dialog > p {
     margin: 0 0 1em;
     padding: 1em;
     background-color: #F7F7F7;
@@ -57,7 +57,7 @@
   </style>
 </head>
 
-<body class="rails-default-error-page">
+<body class="page">
   <!-- This file lives in public/500.html -->
   <div class="dialog">
     <div>
